# lit-template

./: README.md  main.py  pyproject.toml
configs/: mnist.yml  mnist_schedulefree.yml
src/: config.py  optimizer.py  trainer.py
src/dataset/: mnist.py
src/models/: mnist.py
src/optmizer/: __init__.py
src/saving/: __init__.py  hf_hub.py  safetensors.py  util.py
src/scheduler/: __init__.py  nothing.py
tests/: test_saving.py
